welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: ';' expected but 'else' found.
      } else {avance();gauche()}}; else {if (getDirection() == Direction.OUEST) {droite();if (estFaceMur()){return True} else{avance();droite()}}}; else {false}}
                                                                                                                                                    ^SnakeBuggle:7: error: Missing closing brace `}' assumed here
override def run() {
^